--- a/StudentsWebApplication/packages.config
+++ b/StudentsWebApplication/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AngularJS.Core" version="1.4.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
