--- a/StudentsWebApplication/StudentsWebApplication.csproj
+++ b/StudentsWebApplication/StudentsWebApplication.csproj
@@ -102,6 +102,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\angular-mocks.js" />
+    <Content Include="Scripts\app\scripts.js" />
     <Content Include="Scripts\app\students-controller.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
